--- a/src/app/customer/style.css
+++ b/src/app/customer/style.css
@@ -2,3 +2,10 @@
     padding-right: 5rem;
     padding-left: 5rem;
 }
+
+@media (max-width: 767px) {
+    .customer-container {
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+}
